--- a/sp5-chap08/pom.xml
+++ b/sp5-chap08/pom.xml
@@ -15,6 +15,11 @@
       <version>5.0.2.RELEASE</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.0.2.RELEASE</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-jdbc</artifactId>
       <version>8.5.27</version>
